# prompt-contracts

./: .coverage 2  .coverage 3  .dockerignore  .gitignore  .gitignore 2  .pre-commit-config.yaml  BEST_PRACTICES.md  CHANGELOG.md  CODEOWNERS  DEVELOPMENT.md  Dockerfile  GITHUB-RELEASE-GUIDE.md  MANIFEST.in  MIGRATION_0.2_to_0.3.md  Makefile  PAPER_IMPLEMENTATION_AUDIT.md  PAPER_UPDATES_v0.3.1.md  PAPER_VERIFICATION.md  PYPI-CHECKLIST.md  PYPI-SETUP.md  QUICKSTART.md  README.md  RELEASE.md  TROUBLESHOOTING.md  V0.3.2_IMPLEMENTATION_SUMMARY.md  compile.sh  complete-release.sh  evaluation_results_v0.3.2.json  install_dev.py  pyproject.toml  release-checklist.sh  requirements.txt  setup-git-remote.sh  setup.py  v0.3.0_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md
audit/: external_case.json  semantic_repair_audit.py
docs/: COMPLIANCE.md  DATA_CARD.md  FAIR_COMPARISON.md
examples/: DATA_CARD.md  README.md
fixtures/: LICENSE.txt  README.md
preregistration/: pcsl_v0.4.0_preregistration.json
prompt paper/: prompt_contracts_paper.aux  prompt_contracts_paper.bbl  prompt_contracts_paper.blg  prompt_contracts_paper.out  prompt_contracts_paper.tex  references.bib
prompt_paper/: prompt_contracts_paper.aux  prompt_contracts_paper.bbl  prompt_contracts_paper.blg  prompt_contracts_paper.out  prompt_contracts_paper.tex  references.bib
scripts/: generate_audit_bundle.py  generate_eval_fixtures.py  live_eval.py  run_full_evaluation.py
tests/: README.md  __init__.py  test_calibration.py  test_checks.py  test_composition.py  test_enforcement.py  test_fdr_correction.py  test_intervals.py  test_loader.py  test_normalization.py  test_parser.py  (+8 more)
(+304 files in other folders)
