[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-contracts"
version = "0.1.0"
description = "Test your LLM prompts like code - PCSL framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Prompt Contracts Contributors"}
]
keywords = ["llm", "testing", "contracts", "prompt-engineering", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prompt-contracts = "promptcontracts.cli:main"

[project.urls]
Homepage = "https://github.com/promptcontracts/prompt-contracts"
Documentation = "https://promptcontracts.org/docs"
Repository = "https://github.com/promptcontracts/prompt-contracts"
"Bug Tracker" = "https://github.com/promptcontracts/prompt-contracts/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptcontracts = ["spec/**/*.json", "spec/**/*.md"]

